2019-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lcms: lcms2 is updated to 2.9 release.

	* tiff: libtiff is updated to 4.1.0 release.

2019-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPatternPath): Don't leak memory if
	fill_pattern or stroke_pattern of cloned draw_info are not null.
	Fixes oss-fuzz issue 18948 "graphicsmagick:coder_MVG_fuzzer:
	Indirect-leak in CloneImage".
	(PrimitiveInfoRealloc): Clear freshly-allocated PrimitiveInfo
	memory.

2019-11-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Fix oss-fuzz issue
	17986 "graphicsmagick:coder_JPG_fuzzer: Heap-buffer-overflow in
	GenerateEXIFAttribute".  This problem likely only happens in
	32-bit builds.

2019-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Only magnify the image if the
	requested magnification methods are supported.

2019-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compress.c (HuffmanDecodeImage): Fix signed overflow on
	range check which leads to heap overflow in 32-bit
	applications. Requires a relatively large file input compared with
	typical fuzzer files (greater than a megabyte) to trigger.
	Problem reported to the graphicsmagick-security mail address by
	Justin Tripp on 2019-11-13.
	(Ascii85Tuple): Fix thread safety issue by requiring caller to
	pass in tuple buffer as an argument and having callers allocate
	tuple buffer on the stack.

2019-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/bit_stream.c: Add restrict declarations to slightly
	improve performance and decrease code size.

	* TclMagick/pkgIndex.tcl: Incorporate recommendations from third
	problem noted in SourceForge issue #420 "TclMagick issues and
	patch".  This is supposed to help support using an uninstalled
	GraphicsMagick and allow the installation path to contain a space.
