@@ -1,3 +1,7 @@
+2019-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* png: libpng is updated to 1.6.37 release.
+
 2019-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lcms: lcms2 is updated to 2.9 release.
